--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 .className += t + "touch")
         }(window, document);
     </script>
-    <link rel="icon" href="/images/IECO_fav.png">
+    <link rel="icon" href="./images/IECO_fav.png">
     <script type="text/javascript">
         ! function (f, b, e, v, n, t, s) {
             if (f.fbq) return;
@@ -139,7 +139,7 @@
                         </div>
                         <div class="team-slide-wrapper w-slide">
                             <div class="team-block-2"><img
-                                    src="/images/photos/shutterstock_569487247-1-1520x800.webp"
+                                    src="./images/photos/shutterstock_569487247-1-1520x800.webp"
                                     loading="lazy"
                                     srcset="https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4fc7347837398cc566d3_pay-per-click-work-cover-p-500.webp 500w, https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4fc7347837398cc566d3_pay-per-click-work-cover-p-800.webp 800w, https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4fc7347837398cc566d3_pay-per-click-work-cover-p-1080.webp 1080w, https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4fc7347837398cc566d3_pay-per-click-work-cover.webp 1200w"
                                     sizes="(max-width: 479px) 94vw, (max-width: 991px) 43vw, (max-width: 1439px) 28vw, 282px"
@@ -165,7 +165,7 @@
             <div class="container-2">
                 <div id="philosophy" class="hero-wrapper">
                     <div class="hero-split"><img
-                            src="/images/photos/kiryl-zhukau.jpeg"
+                            src="./images/photos/kiryl-zhukau.jpeg"
                             loading="lazy"
                             srcset="https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/6334d3f5a8bac945ec570cf4_305963843_133783409366056_4553427967484158220_n-p-500.jpeg 500w, https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/6334d3f5a8bac945ec570cf4_305963843_133783409366056_4553427967484158220_n-p-800.jpeg 800w, https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/6334d3f5a8bac945ec570cf4_305963843_133783409366056_4553427967484158220_n-p-1080.jpeg 1080w, https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/6334d3f5a8bac945ec570cf4_305963843_133783409366056_4553427967484158220_n.jpeg 1440w"
                             sizes="(max-width: 479px) 94vw, (max-width: 991px) 92vw, (max-width: 1439px) 43vw, 432.3984375px"
@@ -223,21 +223,21 @@
                     </div>
                     <ul role="list" class="features-right w-list-unstyled">
                         <li class="features-block-two"><img
-                                src="/images/photos/content-marketing-analysis.webp"
+                                src="./images/photos/content-marketing-analysis.webp"
                                 loading="lazy"
                                 srcset="https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4f9997c263774e081c8b_content-marketing-analysis-p-500.webp 500w, https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4f9997c263774e081c8b_content-marketing-analysis-p-800.webp 800w, https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4f9997c263774e081c8b_content-marketing-analysis.webp 1000w"
                                 sizes="(max-width: 479px) 100vw, 80px" alt="" class="features-image" />
                             <p><strong>We will analyze your Ads library </strong></p>
                         </li>
                         <li class="features-block-two"><img
-                                src="/images/photos/5c186b75aa900a72bdbc90f9_grow-chart-type-area.webp"
+                                src="./images/photos/5c186b75aa900a72bdbc90f9_grow-chart-type-area.webp"
                                 loading="lazy"
                                 srcset="https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4d31870e24967f66b91f_5c186b75aa900a72bdbc90f9_grow-chart-type-area-p-500.webp 500w, https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4d31870e24967f66b91f_5c186b75aa900a72bdbc90f9_grow-chart-type-area-p-800.webp 800w, https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4d31870e24967f66b91f_5c186b75aa900a72bdbc90f9_grow-chart-type-area.webp 1400w"
                                 sizes="80px" alt="" class="features-image" />
                             <p><strong>More proven strategies</strong></p>
                         </li>
                         <li class="features-block-two"><img
-                                src="/images/photos/dollar-banknote.webp"
+                                src="./images/photos/dollar-banknote.webp"
                                 loading="lazy"
                                 srcset="https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4fb241528a6a8ed07ec4_dollar-banknote-p-500.webp 500w, https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4fb241528a6a8ed07ec4_dollar-banknote.webp 560w"
                                 sizes="80px" alt="" class="features-image" />
@@ -256,14 +256,14 @@
                             href="#gift" class="footer-link-three">Gift</a></div>
                     <div class="footer-social-block-three"><a href="https://www.facebook.com/kupuelel/" target="_blank"
                             class="footer-social-link-three w-inline-block"><img
-                                src="/images/icons/facebook.svg"
+                                src="./images/icons/facebook.svg"
                                 loading="lazy" alt="facebook" /></a><a href="https://www.instagram.com/kupuelel/"
                             target="_blank" class="footer-social-link-three w-inline-block"><img
-                                src="/images/icons/instagram.svg"
+                                src="./images/icons/instagram.svg"
                                 loading="lazy" alt="instagram" /></a><a
                             href="https://www.youtube.com/channel/UCT9NPT51422pliILJ8CuqsQ" target="_blank"
                             class="footer-social-link-three w-inline-block"><img
-                                src="/images/icons/youtube.svg"
+                                src="./images/icons/youtube.svg"
                                 loading="lazy" alt="youtube" /></a></div>
                 </div>
                 <div class="footer-divider-two"></div>
@@ -278,7 +278,7 @@
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63339f35e84c481d39cb7006"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
     </script>
-    <script src="/scripts/script.js"
+    <script src="./scripts/script.js"
         type="text/javascript"></script>
     <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
 </body>
