--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
         role="banner" class="navigation w-nav">
         <div class="navigation-wrap"><a href="/" aria-current="page" class="logo-link w-nav-brand w--current"><img
-                    src="/images/logo/IECO_crop.png"
+                    src="./images/logo/IECO_crop.png"
                     width="108" alt="ieco media logo" class="logo-image" /></a>
             <div class="menu">
                 <nav role="navigation" class="navigation-items w-nav-menu"><a href="/demo-call.html"
