--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     src="./images/logo/IECO_crop.png"
                     width="108" alt="ieco media logo" class="logo-image" /></a>
             <div class="menu">
-                <nav role="navigation" class="navigation-items w-nav-menu"><a href="/demo-call.html"
+                <nav role="navigation" class="navigation-items w-nav-menu"><a href="/iecosite/demo-call.html"
                         class="button demo w-inline-block">
                         <div>Get a Demo</div>
                     </a></nav>
@@ -88,7 +88,7 @@
                     <div class="paragraph-bigger cc-bigger-white-light">Helping fitness nutrition brands scale to
                         7&amp;8-figures in revenue and add positive emotions to the lives of their customers using the
                         power of paid ads<br /></div>
-                </div><a href="/demo-call.html" class="button demo w-inline-block">
+                </div><a href="/iecosite/demo-call.html" class="button demo w-inline-block">
                     <div class="text-block">Book in Your Free Demo</div>
                 </a>
             </div>
@@ -159,7 +159,7 @@
                     </div>
                     <div class="team-slider-nav-2 w-slider-nav w-slider-nav-invert w-round"></div>
                 </div>
-            </div><a href="/demo-call.html" class="button demo w-button">Book in Your Free Demo</a>
+            </div><a href="/iecosite/demo-call.html" class="button demo w-button">Book in Your Free Demo</a>
         </section>
         <section class="hero-heading-right wf-section">
             <div class="container-2">
@@ -176,7 +176,7 @@
                             been involved in sports and lead an active lifestyle. I think that life is a movement, if
                             you stop, you are not in the game. That&#x27;s why I chose this niche !</p>
                         <div class="text-block-7"><strong>Kiryl Zhukau</strong> - CEO &amp; Founder of IECO Media</div>
-                        <a href="/demo-call.html" class="button demo w-button">Book in Your Free Demo</a>
+                        <a href="/iecosite/demo-call.html" class="button demo w-button">Book in Your Free Demo</a>
                     </div>
                 </div>
             </div>
@@ -244,7 +244,7 @@
                             <p><strong>A $779 Fitness HACKS Cheat-sheet 🚀 FOR YOUR BRAND, FOR FREE!</strong></p>
                         </li>
                     </ul>
-                </div><a href="/demo-call.html" class="button demo w-button">Book in Your Free Demo</a>
+                </div><a href="/iecosite/demo-call.html" class="button demo w-button">Book in Your Free Demo</a>
             </div>
         </section>
         <section class="footer-subscribe wf-section">
