--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <div class="paragraph-bigger cc-bigger-white-light">Helping fitness nutrition brands scale to
                         7&amp;8-figures in revenue and add positive emotions to the lives of their customers using the
                         power of paid ads<br /></div>
-                </div><a href="/iecosite/demo-call.html" class="button demo w-inline-block">
+                </div><a href="./demo-call.html" class="button demo w-inline-block">
                     <div class="text-block">Book in Your Free Demo</div>
                 </a>
             </div>
@@ -176,7 +176,7 @@
                             been involved in sports and lead an active lifestyle. I think that life is a movement, if
                             you stop, you are not in the game. That&#x27;s why I chose this niche !</p>
                         <div class="text-block-7"><strong>Kiryl Zhukau</strong> - CEO &amp; Founder of IECO Media</div>
-                        <a href="/iecosite/demo-call.html" class="button demo w-button">Book in Your Free Demo</a>
+                        <a href="./demo-call.html" class="button demo w-button">Book in Your Free Demo</a>
                     </div>
                 </div>
             </div>
@@ -244,7 +244,7 @@
                             <p><strong>A $779 Fitness HACKS Cheat-sheet 🚀 FOR YOUR BRAND, FOR FREE!</strong></p>
                         </li>
                     </ul>
-                </div><a href="/iecosite/demo-call.html" class="button demo w-button">Book in Your Free Demo</a>
+                </div><a href="./demo-call.html" class="button demo w-button">Book in Your Free Demo</a>
             </div>
         </section>
         <section class="footer-subscribe wf-section">
