--- a/demo-call.html
+++ b/demo-call.html
@@ -80,7 +80,7 @@
                     </a></nav>
                 <div class="menu-button w-nav-button"><img
                         src="/images/menu.png"
-                        width="22" alt="" class="menu-icon" /></div>
+                        width="22" alt="menu" class="menu-icon" /></div>
             </div>
         </div>
     </div>
@@ -91,7 +91,7 @@
                 src="/images/photos/fitness_rocket picture.webp"
                 loading="eager"
                 srcset="https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4ae45dee790b314bef93_fitness_rocket%20picture-p-500.webp 500w, https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4ae45dee790b314bef93_fitness_rocket%20picture.webp 720w"
-                sizes="(max-width: 479px) 300px, (max-width: 767px) 550px, (max-width: 991px) 650px, 720px" alt=""
+                sizes="(max-width: 479px) 300px, (max-width: 767px) 550px, (max-width: 991px) 650px, 720px" alt="fitness rocket guide"
                 class="image-2" /></div>
     </div>
     <div class="section-4 wf-section"></div>
@@ -102,7 +102,7 @@
         <div id="schedular" class="html-embed w-embed w-script">
             <!-- Calendly inline widget begin -->
             <div class="calendly-inline-widget" data-url="https://calendly.com/iecomedia/discovery-call"
-                style="min-width:320px;height:630px;"></div>
+                style="min-width:320px;height:700px;"></div>
             <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
             <!-- Calendly inline widget end -->
         </div>
