--- a/demo-call.html
+++ b/demo-call.html
@@ -68,10 +68,34 @@
 </head>
 
 <body>
-   <!-- Calendly inline widget begin -->
-<div class="calendly-inline-widget" data-url="https://calendly.com/iecomedia/discovery-call" style="min-width:320px;height:630px;"></div>
-<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-<!-- Calendly inline widget end -->
+    <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
+        role="banner" class="navigation w-nav">
+        <div class="navigation-wrap"><a href="/" class="logo-link w-nav-brand"><img
+                    src="/images/logo/IECO_crop.png"
+                    width="108" alt="ieco media" class="logo-image" /></a>
+            <div class="menu">
+                <nav role="navigation" class="navigation-items w-nav-menu"><a href="#book" aria-current="page"
+                        class="button demo w-inline-block w--current">
+                        <div>Get a Demo</div>
+                    </a></nav>
+                <div class="menu-button w-nav-button"><img
+                        src="/images/menu.png"
+                        width="22" alt="menu" class="menu-icon" /></div>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Calendly inline widget begin -->
+        <div class="calendly-inline-widget" data-url="https://calendly.com/iecomedia/discovery-call" style="min-width:320px;height:630px;"></div>
+        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+    <!-- Calendly inline widget end -->
+    
+    <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63339f35e84c481d39cb7006"
+        type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
+    </script>
+    <script src="/scripts/script.js"
+        type="text/javascript"></script>
+    <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
 </body>
 
 </html>
