add fitness nutrition instead of fitness
add fitness nutrition instead of fitness in the second section

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="motto-wrap">
                 <div class="label cc-light">What we believe in</div>
                 <div id="aboutus" class="heading-jumbo-small">IECO Media is the proven E-commerce growth solution for
-                    fitness brands looking to scale to 7-figures<br /></div>
+                    fitness nutrition brands looking to scale to 7-figures<br /></div>
             </div>
             <div class="divider"></div>
         </div>
