TikTok ads changes

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="menu">
                 <nav role="navigation" class="navigation-items w-nav-menu"><a href="./demo-call"
                         class="button demo w-inline-block">
-                        <div>Get a Demo</div>
+                        <div>Let's talk</div>
                     </a></nav>
                 <div class="menu-button w-nav-button"><img
                         src="/images/menu.png"
@@ -95,17 +95,16 @@
                     <div class="heading-jumbo">Let&#x27;s Make You Rich Faster Than Usain Bolt Runs 100m</div>
                     <div class="paragraph-bigger cc-bigger-white-light">Helping fitness nutrition brands scale to
                         7&amp;8-figures in revenue and add positive emotions to the lives of their customers using the
-                        power of paid ads<br /></div>
+                        power of TikTok Ads<br /></div>
                 </div><a href="./demo-call" class="button demo w-inline-block">
-                    <div class="text-block">Book in Your Free Demo</div>
+                    <div class="text-block">Click here if you want to scale your revenue 5x</div>
                 </a>
             </div>
         </div>
         <div class="container">
             <div class="motto-wrap">
                 <div class="label cc-light">What we believe in</div>
-                <div id="aboutus" class="heading-jumbo-small">IECO Media is the proven E-commerce growth solution for
-                    fitness nutrition brands looking to scale to 7-figures<br /></div>
+                <div id="aboutus" class="heading-jumbo-small">IECO Media is a proven TikTok Ads solution for fitness nutrition brands that want to reach a new level<br /></div>
             </div>
             <div class="divider"></div>
         </div>
