bold tiktok text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <title>IECO Media - helping fitness brands scale to 7&amp;8-figures in revenue using the power of paid ads</title>
     <meta
-        content="IECO Media is an ecommerce marketing agency, our mission is to  help fitness brands scale to 7&amp;8-figures in revenue and add positive emotions to the lives of their customers using the power of paid ads. We use a 360 approach, proven advertising strategies and competitor analysis. We are the best ecommerce marketing agency in the fitness niche"
+        content="IECO Media is a TikTok marketing agency, our mission is to  help fitness brands scale to 7&amp;8-figures in revenue and add positive emotions to the lives of their customers using the power of paid ads. We use a 360 approach, proven advertising strategies and competitor analysis. We are the best TikTok agency in the fitness nutrition space"
         name="description" />
     <meta content="IECO Media" property="og:title" />
     <meta content="/images/photos/Screen Shot 2022-12-09 at 4.16.08 PM.png"
@@ -95,7 +95,7 @@
                     <div class="heading-jumbo">Let&#x27;s Make You Rich Faster Than Usain Bolt Runs 100m</div>
                     <div class="paragraph-bigger cc-bigger-white-light">Helping fitness nutrition brands scale to
                         7&amp;8-figures in revenue and add positive emotions to the lives of their customers using the
-                        power of TikTok Ads<br /></div>
+                        power of <b>TikTok Ads</b><br /></div>
                 </div><a href="./demo-call" class="button demo w-inline-block">
                     <div class="text-block">Click here if you want to scale your revenue 5x</div>
                 </a>
