First image & text

--- a/demo-call.html
+++ b/demo-call.html
@@ -95,15 +95,13 @@
         <div class="container-3">
             <div class="hero-wrapper-2">
                 <div class="hero-split-2"><img
-                        src="/images/photos/5c186b75aa900a72bdbc90f9_grow-chart-type-area.webp"
+                        src="Untitled design.webp"
                         loading="lazy"
-                        srcset="https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4d31870e24967f66b91f_5c186b75aa900a72bdbc90f9_grow-chart-type-area-p-500.webp 500w, https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4d31870e24967f66b91f_5c186b75aa900a72bdbc90f9_grow-chart-type-area-p-800.webp 800w, https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4d31870e24967f66b91f_5c186b75aa900a72bdbc90f9_grow-chart-type-area.webp 1400w"
                         sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 92vw, (max-width: 1439px) 43vw, 432.390625px"
                         alt="" class="shadow-two-2" /></div>
                 <div class="hero-split-2">
-                    <h1 class="heading-5">Analysis and audit of your and your competitor&#x27;s ads</h1>
-                    <p class="margin-bottom-24px-2">Together we will go through your ads library, and the
-                        competitor&#x27;s ads library, analyze how you can improve yours</p><a href="#schedular"
+                    <h1 class="heading-5">Tik Tok <b>10x ROI</b> strategies that will help your brand reach a new level in 2023</h1>
+                    <p class="margin-bottom-24px-2">You have to become the best in your niche in 2023, and we know how to do it. You will get the best Tik Tok strategies that you can immediately implement with your team. Don't miss the opportunity to become the best brand in your niche</p><a href="#schedular"
                         class="button demo book w-inline-block">
                         <div>Book in Your Free Demo</div>
                     </a>
