--- a/demo-call.html
+++ b/demo-call.html
@@ -101,7 +101,7 @@
                         alt="" class="shadow-two-2" /></div>
                 <div class="hero-split-2">
                     <h1 class="heading-5">Become The BEST In Your Niche In 2023</h1>
-                    <p class="margin-bottom-24px-2">You have to become the best in your niche in 2023, and we know how to do it. You will get the best Tik Tok strategies that you can immediately implement with your team. Don't miss the opportunity to become the best brand in your niche</p><a href="#schedular"
+                    <p class="margin-bottom-24px-2">YOU have to become the BEST in your niche IN 2023, and we know how to do it. You will get the best <b>Tik Tok 10x ROI strategies</b> that you can immediately implement with your team. Don't miss the opportunity to become the best brand in your niche</p><a href="#schedular"
                         class="button demo book w-inline-block">
                         <div>Book in Your Free Demo</div>
                     </a>
