--- a/demo-call.html
+++ b/demo-call.html
@@ -113,15 +113,14 @@
         <div class="container-3">
             <div class="hero-wrapper-2">
                 <div class="hero-split-2">
-                    <h1 class="heading-6">Proven Set of Strategies</h1>
-                    <p class="margin-bottom-24px-2">We will show modern advertising strategies proven by top sports
-                        brands that you can immediately Implement  with your team</p><a href="#schedular"
+                    <h1 class="heading-6">7-figure Strategies Of Your TOP Competitors</h1>
+                    <p class="margin-bottom-24px-2">You have a chance to beat most of your competitors by making a knight step. And this step will be the use of Tiktok Ads, since 70% of your competitors still do not use this feature. And in addition, you will get Tik Tok strategies of your top competitors.</p><a href="#schedular"
                         class="button demo book w-inline-block">
                         <div>Book in Your Free Demo</div>
                     </a>
                 </div>
                 <div class="hero-split-2"><img
-                        src="/images/photos/content-marketing-analysis.webp"
+                        src="/images/photos/second-offer-picture.webp"
                         loading="lazy"
                         srcset="https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4f9997c263774e081c8b_content-marketing-analysis-p-500.webp 500w, https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4f9997c263774e081c8b_content-marketing-analysis-p-800.webp 800w, https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4f9997c263774e081c8b_content-marketing-analysis.webp 1000w"
                         sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 92vw, (max-width: 1439px) 43vw, 432.390625px"
