--- a/demo-call.html
+++ b/demo-call.html
@@ -138,8 +138,7 @@
                         alt="" class="shadow-two-2" /></div>
                 <div class="hero-split-2">
                     <h1>$779 FITNESS ROCKET Guide For FREE</h1>
-                    <p class="margin-bottom-24px-2">One of the top guides that will help you upgrade your brand and
-                        increase its awareness for free</p>
+                    <p class="margin-bottom-24px-2">After reading this guide, you will be able to make an incredible transition to a new level, and enter the 1% of successful brands in your niche</p>
                 </div>
             </div>
         </div>
