--- a/demo-call.html
+++ b/demo-call.html
@@ -131,13 +131,12 @@
         <div class="container-3">
             <div class="hero-wrapper-2">
                 <div class="hero-split-2"><img
-                        src="/images/photos/fitness_rocket picture.webp"
+                        src="/images/photos/TikTok-Rocket-Blueprint.png"
                         loading="lazy"
-                        srcset="https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4ae45dee790b314bef93_fitness_rocket%20picture-p-500.webp 500w, https://uploads-ssl.webflow.com/63339f35e84c481d39cb7006/635c4ae45dee790b314bef93_fitness_rocket%20picture.webp 720w"
                         sizes="(max-width: 479px) 94vw, (max-width: 750px) 96vw, (max-width: 767px) 720px, (max-width: 991px) 92vw, (max-width: 1439px) 43vw, 432.3828125px"
                         alt="" class="shadow-two-2" /></div>
                 <div class="hero-split-2">
-                    <h1>$779 FITNESS ROCKET Guide For FREE</h1>
+                    <h1>$779 TikTok ROCKET Blueprint For FREE</h1>
                     <p class="margin-bottom-24px-2">After reading this guide, you will be able to make an incredible transition to a new level, and enter the 1% of successful brands in your niche</p>
                 </div>
             </div>
