--- a/demo-call.html
+++ b/demo-call.html
@@ -138,7 +138,7 @@
                 <div class="hero-split-2">
                     <h1>$779 TikTok ROCKET Blueprint For FREE</h1>
                     <p class="margin-bottom-24px-2">After reading this guide, you will be able to make an incredible transition to a new level, and enter the 1% of successful brands in your niche</p>
-                    <a class="button demo book w-inline-block">
+                    <a href="#schedular" class="button demo book w-inline-block">
                         <div>Book in Your Free Demo</div>
                     </a>
                 </div>
