--- a/demo-call.html
+++ b/demo-call.html
@@ -114,7 +114,7 @@
             <div class="hero-wrapper-2">
                 <div class="hero-split-2">
                     <h1 class="heading-6" style="font-size:38px">7-figure Strategies Of Your TOP Competitors</h1>
-                    <p class="margin-bottom-24px-2">You have a chance to beat most of your competitors by making a knight step. And this step will be the use of Tiktok Ads, since 70% of your competitors still do not use this feature. And in addition, you will get Tik Tok strategies of your top competitors.</p><a href="#schedular"
+                    <p class="margin-bottom-24px-2">You have a <b>chance</b> to beat most of your competitors by making a <b>knight step</b>. And this step will be the use of Tiktok Ads, since 70% of your competitors still do not use this feature. And in addition, you will get Tik Tok strategies of your top competitors.</p><a href="#schedular"
                         class="button demo book w-inline-block">
                         <div>Get strategies for free</div>
                     </a>
@@ -137,7 +137,7 @@
                         alt="" class="shadow-two-2" /></div>
                 <div class="hero-split-2">
                     <h1>$779 TikTok ROCKET Blueprint For FREE</h1>
-                    <p class="margin-bottom-24px-2">After reading this guide, you will be able to make an incredible transition to a new level, and enter the 1% of successful brands in your niche</p>
+                    <p class="margin-bottom-24px-2">After reading this guide, you will be able to make an incredible transition to a new level, and <b>enter the 1% </b> of successful brands in your niche</p>
                     <a href="#schedular" class="button demo book w-inline-block">
                         <div>Reach a new level</div>
                     </a>
