--- a/demo-call.html
+++ b/demo-call.html
@@ -103,7 +103,7 @@
                     <h1 class="heading-5" style="font-size:40px">Become The BEST In Your Niche In 2023</h1>
                     <p class="margin-bottom-24px-2">YOU have to become the BEST in your niche IN 2023, and we know how to do it. You will get the best <b>Tik Tok 10x ROI strategies</b> that you can immediately implement with your team. Don't miss the opportunity to become the best brand in your niche</p><a href="#schedular"
                         class="button demo book w-inline-block">
-                        <div>Enter the 1% of successful brands</div>
+                        <div>Enter the 1% of successful brands 📈</div>
                     </a>
                 </div>
             </div>
@@ -116,7 +116,7 @@
                     <h1 class="heading-6" style="font-size:38px">7-figure Strategies Of Your TOP Competitors</h1>
                     <p class="margin-bottom-24px-2">You have a <b>chance</b> to beat most of your competitors by making a <b>knight step</b>. And this step will be the use of Tiktok Ads, since 70% of your competitors still do not use this feature. And in addition, you will get Tik Tok strategies of your top competitors.</p><a href="#schedular"
                         class="button demo book w-inline-block">
-                        <div>Get strategies for free</div>
+                        <div>Get strategies for free 💎</div>
                     </a>
                 </div>
                 <div class="hero-split-2"><img
@@ -139,7 +139,7 @@
                     <h1>$779 TikTok ROCKET Blueprint For FREE</h1>
                     <p class="margin-bottom-24px-2">After reading this guide, you will be able to make an incredible transition to a new level, and <b>enter the 1% </b> of successful brands in your niche</p>
                     <a href="#schedular" class="button demo book w-inline-block">
-                        <div>Reach a new level</div>
+                        <div>Reach a new level 🚀</div>
                     </a>
                 </div>
             </div>
