change new blueprint picture

--- a/demo-call.html
+++ b/demo-call.html
@@ -131,7 +131,7 @@
         <div class="container-3">
             <div class="hero-wrapper-2">
                 <div class="hero-split-2"><img
-                        src="/images/photos/TikTok-Rocket-Blueprint.png"
+                        src="/images/photos/tt-blueprint-offer-horizontal.jpg"
                         loading="lazy"
                         sizes="(max-width: 479px) 94vw, (max-width: 750px) 96vw, (max-width: 767px) 720px, (max-width: 991px) 92vw, (max-width: 1439px) 43vw, 432.3828125px"
                         alt="" class="shadow-two-2" /></div>
