change 7-figure strategies picture

--- a/demo-call.html
+++ b/demo-call.html
@@ -120,7 +120,7 @@
                     </a>
                 </div>
                 <div class="hero-split-2"><img
-                        src="/images/photos/second-offer-picture.webp"
+                        src="/images/photos/linkedin_cta.jpg"
                         loading="lazy"       
                         sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 92vw, (max-width: 1439px) 43vw, 432.390625px"
                         alt="" class="shadow-two-2" /></div>
