--- a/demo-call.html
+++ b/demo-call.html
@@ -95,7 +95,7 @@
         <div class="container-3">
             <div class="hero-wrapper-2">
                 <div class="hero-split-2"><img
-                        src="/images/photos/getting-start-tiktok.webp"
+                        src="/images/photos/TikTok-UGC.png"
                         loading="lazy"
                         sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 92vw, (max-width: 1439px) 43vw, 432.390625px"
                         alt="" class="shadow-two-2" /></div>
