add partners section

--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
                 <div class="label cc-light">What we believe in</div>
                 <div id="aboutus" class="heading-jumbo-small">IECO Media is a proven TikTok Ads solution for fitness nutrition brands that want to reach a new level<br /></div>
             </div>
-            <div class="divider"></div>
+            <div>
+                <img class="partners" src="/images/photos/partners-test.png">
+            </div>
         </div>
         <section id="process" class="team-slider wf-section">
             <div class="container-2">
