--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="intro-header">
             <div class="intro-content cc-homepage">
                 <div class="intro-text">
-                    <div class="heading-jumbo">Let&#x27;s Make You Rich Faster Than Usain Bolt Runs 100m</div>
+                    <div class="heading-jumbo">Next Level Fitness Nutrition Branding with AI and TikTok Ads</div>
                     <div class="paragraph-bigger cc-bigger-white-light">Helping fitness nutrition brands scale to
                         7&amp;8-figures in revenue and add positive emotions to the lives of their customers using the
                         power of <b>TikTok Ads</b><br /></div>
