What we believe in line change

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="motto-wrap">
             <div class="container">
                 <div class="label cc-light">What we believe in</div>
-                <div id="aboutus" class="heading-jumbo-small">IECO Media is a proven TikTok Ads solution for fitness nutrition brands that want to reach a new level<br /></div>
+                <div id="aboutus" class="heading-jumbo-small">1 billion users on TikTok, 1 billion opportunities for your brand.<br /></div>
             </div>
         </div>
         
